# Collatz-ghost

./: LICENSE  README.md  pyproject.toml
collatz_ghost/: __init__.py  affine.py  certs.py  cli.py  family.py  pattern.py  solver.py  util.py  verifier.py
docs/: GHOST_TRACKING.md  GLOSSARY.md  NOVELTY.md  QUICKSTART.md  REAL_CYCLE_PROTOCOL.md  THEORY.md  USAGE.md  WHAT_ARE_GHOSTS.md
registry/: CHECKSUMS.txt  RUNS.csv
tools/: ghost_tracker.py  run_atlas.py  summarize_atlas.py
